# sepa

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
examples/: sepa_batch.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: build.rs  identifiers.rs  parse.rs
src/: bic.rs  camt.rs  camt052.rs  camt053.rs  camt054.rs  charset.rs  charset_table.rs  creditor_id.rs  iban.rs  lib.rs  pain001.rs  pain002.rs  pain008.rs  party.rs  purpose.rs  reference.rs  validate.rs  xml.rs  xml_util.rs
tests/: integration.rs
tests/xsd/: README.md
