[package]
name         = "sepa"
version      = "0.3.0"
rust-version = "1.85"
edition      = "2024"
authors      = ["hupe1980"]
description  = """\
SEPA payment utilities: IBAN validation (ISO 13616 + country registry), \
BIC validation (ISO 9362), \
pain.001 SCT + SCT Inst XML builder (pain.001.003.03 / pain.001.001.09), \
pain.008 SDD CORE + B2B XML builder (pain.008.003.02), \
pain.002 status report parser, camt.053 statement parser, \
camt.054 notification types. \
Zero I/O. No async. No f64 in monetary arithmetic.\
"""
repository   = "https://github.com/hupe1980/sepa"
license      = "MIT OR Apache-2.0"
keywords     = ["sepa", "iban", "iso20022", "payments", "banking"]
categories   = ["finance", "encoding"]
readme       = "README.md"

[features]
default = []
## Enable serde Serialize / Deserialize on all public types.
serde = ["dep:serde"]
## Enable `camt054::parse_simple_json` — parses bank CSV/JSON export format.
json  = ["dep:serde_json"]

[dependencies]
thiserror  = { version = "2", default-features = false }
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
